# CDT

./: .gitignore  CMakeLists.txt  CMakeLists.txt.emscripten  IMPLEMENTATION_SUMMARY.md  README_WASM.md  cdt.d.ts  cdt.js  demo.html  index.html  package-lock.json  package.json  simple_test.html  test_bindings  test_bindings.cpp  test_parser.html
.github/workflows/: build-emscripten.yml
6/merge/: cdt.js  package.json
8/merge/: README.md  index.html  package.json
Input_file/: boeing_part.off.tet
demo-src/: World.js  main.js
include/: indirect_predicates.hpp  numerics.h  numerics.hpp
main/: package.json
src/: PLC.cpp  bindings.cpp  delaunay.cpp
test-build/: CMakeCache.txt  Makefile  cmake_install.cmake
wasm/: cdt.js  demo.html  package.json
